force-app/main/default/objects/PickList__c/PickList__c.object-meta.xml
<CustomObject>
    <label>下拉框值</label>
    <nameField>
        <label>PrickList Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>