force-app/main/default/objects/PickList__c/fields/belong_to_he__c.field-meta.xml
<CustomField>
    <fullName>belong_to_he__c</fullName>
    <label>belong to(hisense entity)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hisense_Entity</valueSetName>
    </valueSet>
</CustomField>