force-app/main/default/objects/PickList__c/fields/belong_to_Loc__c.field-meta.xml
<CustomField>
    <fullName>belong_to_Loc__c</fullName>
    <label>belong to(Loc)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>