force-app/main/default/objects/PickList__c/fields/belong_to_office__c.field-meta.xml
<CustomField>
    <fullName>belong_to_office__c</fullName>
    <label>belong to(office)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>