force-app/main/default/objects/PickList__c/fields/belong_to_RR_Country__c.field-meta.xml
<CustomField>
    <fullName>belong_to_RR_Country__c</fullName>
    <label>belong to(RR Country)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>