force-app/main/default/objects/PickList__c/recordTypes/Master_Data_Office.recordType-meta.xml
<RecordType>
    <fullName>Master_Data_Office</fullName>
    <active>true</active>
    <label>Master Data(Office)</label>
</RecordType>