force-app/main/default/objects/PickList__c/recordTypes/Master_Data_Orgnization.recordType-meta.xml
<RecordType>
    <fullName>Master_Data_Orgnization</fullName>
    <active>true</active>
    <label>Master Data(Orgnization)</label>
</RecordType>