force-app/main/default/objects/PickList__c/recordTypes/Master_Data_RR_Country.recordType-meta.xml
<RecordType>
    <fullName>Master_Data_RR_Country</fullName>
    <active>true</active>
    <label>Master Data(RR Country)</label>
</RecordType>