force-app/main/default/objects/PickList__c/recordTypes/Master_Data_Team.recordType-meta.xml
<RecordType>
    <fullName>Master_Data_Team</fullName>
    <active>true</active>
    <label>Master Data(Team)</label>
</RecordType>