force-app/main/default/objects/PickList__c/recordTypes/Master_Data_Unified_Customer_Group.recordType-meta.xml
<RecordType>
    <fullName>Master_Data_Unified_Customer_Group</fullName>
    <active>true</active>
    <description>统一客户组</description>
    <label>Master Data(Unified Customer Group)</label>
</RecordType>