force-app/main/default/objects/PickList__c/recordTypes/Master_Location.recordType-meta.xml
<RecordType>
    <fullName>Master_Location</fullName>
    <active>true</active>
    <label>Master(Location)</label>
</RecordType>