force-app/main/default/objects/PickList__c/recordTypes/Master_Storage_Location.recordType-meta.xml
<RecordType>
    <fullName>Master_Storage_Location</fullName>
    <active>true</active>
    <label>Master(Storage Location)</label>
</RecordType>