force-app/main/default/objects/PickList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>belong_to_office__c</columns>
    <columns>belong_to_orgnization__c</columns>
    <columns>belong_to_he__c</columns>
    <columns>ex_id__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Value__c</columns>
    <columns>belong_to_Loc__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>