force-app/main/default/objects/PickList__c/listViews/SAP_Office.listView-meta.xml
<ListView>
    <fullName>SAP_Office</fullName>
    <columns>Value__c</columns>
    <columns>NAME</columns>
    <columns>belong_to_he__c</columns>
    <columns>belong_to_orgnization__c</columns>
    <columns>ex_id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PickList__c.Master_Data_Office</value>
    </filters>
    <label>SAP Office</label>
</ListView>